# screensavers-bounce

./: Cargo.toml  README.md  build.rs
assets/: scene-bounce.desktop  scene-bounce.xml
src/: main.rs  screensaver_shim.rs
src/bounce/: mod.rs  physics.rs  types.rs
