[package]
name = "bounce"
version = "2026.6.10-1"
edition = "2021"
description = "bounce - retro terminal screensaver effect"
autobins = false

[[bin]]
name = "bounce"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media",
] }

[build-dependencies]
embed-resource = "2"
[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[package.metadata.deb]
name = "screensaver-bounce"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Screensaver effect (bounce) part of the screensavers collection."
depends = "libc6, xterm"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bounce", "usr/libexec/local76/screensavers/bounce", "755"],
    ["assets/local76-bounce.desktop", "usr/share/applications/local76-bounce.desktop", "644"],
    ["assets/local76-bounce.xml", "usr/share/xscreensaver/config/local76-bounce.xml", "644"],
    ["assets/local76-bounce.png", "usr/share/pixmaps/local76-bounce.png", "644"]
]

[package.metadata.generate-rpm]
name = "screensaver-bounce"
version = "2026.6.10.1"
release = "1"
arch = "x86_64"
summary = "bounce - retro terminal screensaver effect"
description = "Screensaver effect (bounce) part of the screensavers collection."
license = "MIT"
assets = [
    { source = "target/release/bounce", dest = "/usr/libexec/local76/screensavers/bounce", mode = "755" },
    { source = "assets/local76-bounce.desktop", dest = "/usr/share/applications/local76-bounce.desktop", mode = "644" },
    { source = "assets/local76-bounce.xml", dest = "/usr/share/xscreensaver/config/local76-bounce.xml", mode = "644" },
    { source = "assets/local76-bounce.png", dest = "/usr/share/pixmaps/local76-bounce.png", mode = "644" }
]
